--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-parallax": "^3.3.0",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
-    "react-scroll-parallax": "^2.4.3",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^12.4.0",
