--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hashlips_nft_minting_dapp",
+  "name": "teddu_gang_club",
   "version": "1.0.0",
-  "description": "HashLips minting dapp is a quick and easy way to connect your smart contract and start minting NFTs.",
+  "description": "",
   "private": true,
   "dependencies": {
     "aos": "^3.0.0-beta.6",
@@ -22,7 +22,7 @@
     "web3": "^1.5.1",
     "web3-eth-contract": "^1.5.2"
   },
-  "author": "Daniel Eugene Botha (HashLips)",
+  "author": "Teddy Gang Club",
   "license": "MIT",
   "scripts": {
     "start": "react-scripts start",
